# otus-log-analyzer

./: .gitignore  README.md  config.ini  log_analyzer.py  pyproject.toml  report.html  setup.cfg
.github/workflows/: main.yml
conf/: logging.py
tests/: conftest.py  test_analyzer.py
